--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angularjs-template-loader": "^0.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "cypress": "^9.6.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
@@ -43,6 +44,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --progress",
+    "start-mocked": "cross-env NODE_ENV=production webpack-dev-server --open --progress",
     "test": "jest"
   }
 }
