--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/preset-env": "^7.8.7",
     "angularjs-template-loader": "^0.1.2",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "cypress": "^9.6.1",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
