--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@babel/preset-env": "^7.8.7",
     "angularjs-template-loader": "^0.1.2",
     "babel-loader": "^8.2.3",
-    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "cypress": "^9.6.1",
+    "dotenv": "^16.0.1",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -35,6 +35,7 @@
     "htmlhint-loader": "^1.3.1",
     "imports-loader": "^0.8.0",
     "jest": "^27.4.7",
+    "msw": "^0.39.2",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
     "vue-loader": "^15.9.8",
@@ -46,7 +47,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --progress",
-    "start-mocked": "cross-env NODE_ENV=production webpack-dev-server --open --progress",
     "test": "jest"
+  },
+  "msw": {
+    "workerDirectory": "\\"
   }
 }
